# ignored

./: Cargo.toml  README.md  typos.toml
.github/workflows/: build.yml  nightly.yml  spellcheck.yml
src/: constant.rs  lib.rs  utils.rs
src/evaluator/: error.rs  evaluator.rs  file.rs  git_config.rs  git_root.rs  glob.rs  mod.rs  types.rs  utils.rs
src/evaluator/snapshots/: ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_0.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_1.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_10.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_11.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_12.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_13.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_14.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_15.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_16.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_17.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_18.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_19.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_2.snap  ignored__evaluator__glob__tests__test_glob_regexes_match_snapshot_20.snap  (+9 more)
src/evaluator/utils/: git_config.rs  git_ignore.rs  mod.rs
src/lexer/: error.rs  mod.rs  types.rs
src/macros/: is_ignored.rs  mod.rs
tests/fixtures/: .gitignore
(+1 files in other folders)
